--- a/style.css
+++ b/style.css
@@ -22,10 +22,17 @@ body {
   align-items: center;
   padding: 16px 0;
 }
+.navigation > .logo > img {
+  cursor: pointer;
+}
 .navigation > a {
   text-decoration: none;
   font-size: 16px;
   color: #fff;
+  transition: all 0.3s ease-in-out;
+}
+.navigation > a:hover {
+  color: #ef6d58;
 }
 .navigation > a > button {
   color: #fff;
@@ -41,4 +48,11 @@ body {
   text-align: center;
   text-transform: uppercase;
   cursor: pointer;
+  box-shadow: inset 0 0 0 0 #ef6d58;
+  -webkit-transition: ease-out 0.4s;
+  -moz-transition: ease-out 0.4s;
+  transition: ease-out 0.4s;
+}
+.navigation > a > button:hover {
+  box-shadow: inset 400px 0 0 0 #ef6d58;
 }
