--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+/***global styles***/
 * {
   margin: 0;
   padding: 0;
@@ -13,14 +14,18 @@ body {
   margin: 0 auto;
 }
 
+/***Header*****/
 .header {
   background-color: #28293e;
 }
+/**Navigation menu**/
 .navigation {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px 0;
+  padding-top: 16px;
+  position: sticky;
+  top: 0;
 }
 .navigation > .logo > img {
   cursor: pointer;
@@ -55,4 +60,24 @@ body {
 }
 .navigation > a > button:hover {
   box-shadow: inset 400px 0 0 0 #ef6d58;
+}
+
+/**Page banner**/
+.banner {
+  text-align: center;
+  padding-top: 100px;
+}
+.banner > h1 {
+  font-weight: 800;
+  font-size: 72px;
+  line-height: 80px;
+  letter-spacing: -2px;
+  color: #ffffff;
+}
+.banner > p {
+  font-size: 16px;
+  line-height: 32px;
+  color: rgba(255, 255, 255, 0.64);
+  max-width: 570px;
+  margin: 0 auto;
 }
