--- a/style.css
+++ b/style.css
@@ -13,7 +13,12 @@ body {
   max-width: 1170px;
   margin: 0 auto;
 }
-
+.section-divider {
+  height: 1px;
+  max-width: 1170px;
+  margin: 0 auto;
+  background: #f3d1bf;
+}
 /***Header*****/
 .header {
   background-color: #28293e;
@@ -27,6 +32,7 @@ body {
   position: sticky;
   top: 0;
   background-color: #28293e;
+  z-index: 999;
 }
 .navigation > .logo > img {
   cursor: pointer;
@@ -94,6 +100,7 @@ body {
   gap: 30px;
   padding-top: 80px;
   padding-bottom: 64px;
+  border-bottom: 1px solid #f3d1bf;
 }
 .featured-blog-card {
   width: 100%;
@@ -115,4 +122,70 @@ body {
   color: #391400;
   font-size: 20px;
   padding: 24px 0;
+}
+
+/****Blogs***/
+.blogs {
+  background-color: #fdf0e9;
+  padding: 80px 0 64px 0;
+}
+
+.blogs > .container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
+  grid-gap: 64px 30px;
+}
+.blog-img {
+  width: 370px;
+}
+.blog-img > img {
+  width: 100%;
+  height: auto;
+  border-radius: 6px;
+}
+.blog-card {
+  max-width: 370px;
+}
+.blog-card > h3 {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 32px;
+  color: #391400;
+  padding-bottom: 16px;
+}
+.blog-card > time {
+  font-size: 16px;
+  line-height: 32px;
+  color: rgba(57, 20, 0, 0.64);
+}
+.blog-tag {
+  font-size: 20px;
+  line-height: 32px;
+  color: #391400;
+  padding: 24px 0 16px 0;
+}
+.blog-load-more-btn {
+  display: block;
+  margin: 64px auto;
+  background: #ffffff;
+  box-shadow: 0px 3px 9px rgba(57, 20, 0, 0.08);
+  border-radius: 6px;
+  font-weight: 900;
+  font-size: 14px;
+  line-height: 14px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #391400;
+  padding: 16px 32px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  box-shadow: inset 0 0 0 0 #ef6d58;
+  -webkit-transition: ease-out 0.4s;
+  -moz-transition: ease-out 0.4s;
+  transition: ease-out 0.4s;
+}
+.blog-load-more-btn:hover {
+  box-shadow: inset 400px 0 0 0 #ef6d58;
+  color: #fff;
 }
