--- a/style.css
+++ b/style.css
@@ -19,6 +19,32 @@ body {
   margin: 0 auto;
   background: #f3d1bf;
 }
+
+.btn {
+  display: block;
+  background: #ffffff;
+  box-shadow: 0px 3px 9px rgba(57, 20, 0, 0.08);
+  border-radius: 6px;
+  font-weight: 900;
+  font-size: 14px;
+  line-height: 14px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #391400;
+  padding: 16px 32px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  box-shadow: inset 0 0 0 0 #ef6d58;
+  -webkit-transition: ease-out 0.4s;
+  -moz-transition: ease-out 0.4s;
+  transition: ease-out 0.4s;
+}
+.btn:hover {
+  box-shadow: inset 400px 0 0 0 #ef6d58;
+  color: #fff;
+}
+
 /***Header*****/
 .header {
   background-color: #28293e;
@@ -188,4 +214,37 @@ body {
 .blog-load-more-btn:hover {
   box-shadow: inset 400px 0 0 0 #ef6d58;
   color: #fff;
+}
+
+/***Newsletter***/
+.newsletter {
+  background-color: #fdf0e9;
+}
+.newsletter > .container {
+  padding-bottom: 64px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.newsletter > .container > h3 {
+  font-weight: 800;
+  font-size: 40px;
+  line-height: 48px;
+  color: #391400;
+}
+.newsletter-form {
+  display: flex;
+  gap: 30px;
+}
+.newsletter-form > input {
+  background: #ffffff;
+  border: 1px solid #f3d1bf;
+  border-radius: 6px;
+  outline: none;
+  min-width: 370px;
+  padding: 0 16px;
+  transition: all 0.2s ease-in-out;
+}
+.newsletter-form > input:focus {
+  border: 2px solid #ef6d58;
 }
